# Item2vec-Recommendation-System

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: item2vec_analysis.ipynb
scripts/: train.py
src/data/: data_utils.py
src/evaluation/: __init__.py
src/models/: __init__.py  baselines.py
src/utils/: seed.py
tests/: test_models.py
